--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -4,22 +4,28 @@
 // @Tg group          https://t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20201124
-// @Attention         请勿引用本重写配置
+// @Attention         For backup,请勿引用本重写配置
 // @ScriptTime        若脚本失效可抓取对应时间的旧版本应用
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Conf/Quan_crack.conf
 // ==/UserScript==
 
 ****Please don't quote this rewrite configuration****
 
-hostname = quanzi.jizhangapp.com, iosoi.cn, 106.54.2.168, api.yonekura.cn, api.xiuxiu.meitu.com, api.meiyan.com, panel.getdailyart.com, biz.caiyunapp.com, www.40sishi.com, outcut.szsszykj.com, picturebook.ipalfish.com, license.pdfexpert.com, api2.fitplanapp.com, api.shayujizhang.com, r.51wnl-cq.com, d.smkj33.top, api.dushu.io, getway.radio.cn, api.reface.video, www.helloshiyu.com, api.bspapp.com, avoscloud.com, bbs.maibaapp.com, duoting.tatatimes.com, cm.szsszykj.com, avoscloud.com, api.flexibits.com, d.syshhc.top, 115.28.168.103, dbapi.ganbuguo.com, mb3admin.com, api.591master.com, www.mindmeister.com, subs.platforms.team, sports.lifesense.com, api.pushover.net, subs.platforms.team, api.hulusaas.com, snailsleep.net,music.snailsleep.net,community.snailsleep.net, api.jiaonizuocai.com, nmeditation.snailsleep.net, api.m.jd.com, claritywallpaper.com, subscription-service.neuralprisma.com, mappsv5.caixin.com, diary.7english.cn, buy.itunes.apple.com, api.gotokeep.com, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
+hostname = jabi.coding.net, quanzi.jizhangapp.com, iosoi.cn, 106.54.2.168, api.yonekura.cn, api.xiuxiu.meitu.com, api.meiyan.com, panel.getdailyart.com, biz.caiyunapp.com, www.40sishi.com, outcut.szsszykj.com, picturebook.ipalfish.com, license.pdfexpert.com, api2.fitplanapp.com, api.shayujizhang.com, r.51wnl-cq.com, d.smkj33.top, api.dushu.io, getway.radio.cn, api.reface.video, www.helloshiyu.com, api.bspapp.com, avoscloud.com, bbs.maibaapp.com, duoting.tatatimes.com, cm.szsszykj.com, avoscloud.com, api.flexibits.com, d.syshhc.top, 115.28.168.103, dbapi.ganbuguo.com, mb3admin.com, api.591master.com, www.mindmeister.com, subs.platforms.team, sports.lifesense.com, api.pushover.net, subs.platforms.team, api.hulusaas.com, snailsleep.net,music.snailsleep.net,community.snailsleep.net, api.jiaonizuocai.com, nmeditation.snailsleep.net, api.m.jd.com, claritywallpaper.com, subscription-service.neuralprisma.com, mappsv5.caixin.com, diary.7english.cn, buy.itunes.apple.com, api.gotokeep.com, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
 
 
+
+
+
+# > 059 扎比科技资源箱 微信小程序crack 弹框显示最新三天download地址（20201214）
+https://jabi.coding.net/p/xcx/d/xcx/git/raw/master/jabikj.json url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/jabi.js
 
 # > 058 圈子记账 你的记账小工具（20201214）
 https://quanzi.jizhangapp.com/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/qzjz.js
 
-# > 057 AppleAndroid 微信小程序破解 弹框显示内容（20201213）
+# > 057 AppleAndroid 微信小程序破解 弹框显示内容（20201214）
 https://iosoi.cn/wp-json/wp/v2/posts/\d+ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/aa.js
+https://iosoi.cn/wp-content/plugins/xingshu.php url response-body adid":"[^"]*" response-body adid":""
 
 # > 056 emmo 解锁会员（20201209）
 ^http://106.54.2.168/emmoDiary/user/getUser url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/emmo.js
