--- a/Rewrite/Applet.conf
+++ b/Rewrite/Applet.conf
@@ -32,6 +32,7 @@ https://[a-z]+.ddly666.top/wp-json/wp/v2/posts/* url script-response-body https:
 
 # > 004 黑科技软件（20200901）微信小程序解锁隐藏内容 去除广告直接查看内容
 ^https:\/\/hkj178.com/wp-json/mp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+https://hkj178.com/wp-json/mp/v2/advert/wechat url reject-200
 
 # > 003 天泽后花园（20200901）微信小程序解锁隐藏内容 去除广告直接查看内容
 ^https:\/\/a.jxjt888.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
@@ -39,5 +40,7 @@ https://[a-z]+.ddly666.top/wp-json/wp/v2/posts/* url script-response-body https:
 # > 002 小野分享（20200901）微信小程序解锁隐藏内容 去除广告直接查看内容
 ^https:\/\/lysl2020.com/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
-# > 001 搜罗好货（20200901）微信小程序解锁隐藏内容 去除广告直接查看内容
+# > 001 搜罗好货（20201214）微信小程序解锁隐藏内容 去除广告直接查看内容
 ^https:\/\/www.i3zh.com/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+# > 辅助去除主页面嵌入式卡片广告
+https://www.i3zh.com/wp-json/wp/v2/posts url response-body Ad":"1 response-body Ad":"0
