--- a/Rewrite/Applet.conf
+++ b/Rewrite/Applet.conf
@@ -21,7 +21,7 @@ https://jabi.coding.net/p/xcx/d/xcx/git/raw/master/jabikj.json url script-respon
 
 # > 007 AppleAndroid 微信小程序破解 弹框显示内容（20201214）
 https://iosoi.cn/wp-json/wp/v2/posts/\d+ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/aa.js
-# > 辅助去除页面嵌入式式卡片广告
+# > 辅助去除页面嵌入式式卡片广告（20201214）
 https://iosoi.cn/wp-content/plugins/xingshu.php url response-body adid":"[^"]*" response-body adid":""
 
 # > 006 森茂雅苑 微信小程序解锁隐藏内容 去除广告直接查看内容（20201027）
@@ -39,8 +39,10 @@ https://hkj178.com/wp-json/mp/v2/advert/wechat url reject-200
 
 # > 002 小野分享（20200901）微信小程序解锁隐藏内容 去除广告直接查看内容
 ^https:\/\/lysl2020.com/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+# > 辅助去除主页面嵌入式卡片广告(20201214)
+https://lysl2020.com/wp-json/wp/v2/posts url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xyfx.js
 
-# > 001 搜罗好货（20201214）微信小程序解锁隐藏内容 去除广告直接查看内容
+# > 001 搜罗好货（20200924）微信小程序解锁隐藏内容 去除广告直接查看内容
 ^https:\/\/www.i3zh.com/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
-# > 辅助去除主页面嵌入式卡片广告
+# > 辅助去除主页面嵌入式卡片广告（20201214）
 https://www.i3zh.com/wp-json/wp/v2/posts url response-body Ad":"1 response-body Ad":"0
