--- a/Rewrite/Applet.conf
+++ b/Rewrite/Applet.conf
@@ -38,11 +38,11 @@ https://hkj178.com/wp-json/mp/v2/advert/wechat url reject-200
 ^https:\/\/a.jxjt888.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
 # > 002 小野分享（20200901）微信小程序解锁隐藏内容 去除广告直接查看内容
-^https:\/\/lysl2020.com/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+^https:\/\/lysl2020.com/wp-json/wp/v2/posts/\d+ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 # > 辅助去除主页面嵌入式卡片广告(20201214)
-https://lysl2020.com/wp-json/wp/v2/posts url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xyfx.js
+https://lysl2020.com/wp-json/wp/v2/posts\? url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xyfx.js
 
 # > 001 搜罗好货（20200924）微信小程序解锁隐藏内容 去除广告直接查看内容
-^https:\/\/www.i3zh.com/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+^https:\/\/www.i3zh.com/wp-json/wp/v2/posts/\d+ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 # > 辅助去除主页面嵌入式卡片广告（20201214）
-https://www.i3zh.com/wp-json/wp/v2/posts url response-body Ad":"1 response-body Ad":"0
+https://www.i3zh.com/wp-json/wp/v2/posts\? url response-body Ad":"1 response-body Ad":"0
