--- a/Rewrite/Applet.conf
+++ b/Rewrite/Applet.conf
@@ -32,6 +32,7 @@ https://[a-z]+.ddly666.top/wp-json/wp/v2/posts/* url script-response-body https:
 
 # > 004 黑科技软件（20200901）微信小程序解锁隐藏内容 去除广告直接查看内容
 ^https:\/\/hkj178.com/wp-json/mp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+# > 辅助去除页面嵌入式式卡片广告（20201214）
 https://hkj178.com/wp-json/mp/v2/advert/wechat url reject-200
 
 # > 003 天泽后花园（20200901）微信小程序解锁隐藏内容 去除广告直接查看内容
