--- a/Rewrite/Applet.conf
+++ b/Rewrite/Applet.conf
@@ -1,5 +1,5 @@
 // ==UserScript==
-// @Name              **微信小程序去除广告直接查看隐藏内容**
+// @Name              **微信小程序去除广告直接查看隐藏内容或弹窗显示内容**
 // @Using             复制重写链接至QuantumultX的[rewrite_remote]下
 // @Download          进入小程序，搜索对应名称即可
 // @Author            Cuttlefish
