--- a/Applet/Surge.conf
+++ b/Applet/Surge.conf
@@ -1,6 +1,6 @@
 # ==UserScript==
 # @ScriptName        微信小程序去除广告直接查看隐藏内容或弹窗显示内容
-# @Using             复制重写链接至Loon里
+# @Using             复制链接至Surge的Model订阅里
 # @Download          进入小程序，搜索对应名称即可
 # @Author            Cuttlefish
 # @Tg group          https://t.me/ddgksf2013
