--- a/Applet/Surge.conf
+++ b/Applet/Surge.conf
@@ -1,21 +1,22 @@
-# ==UserScript==
-# @ScriptName        微信小程序去除广告直接查看隐藏内容或弹窗显示内容
-# @Using             复制链接至Surge的Model订阅里
-# @Download          进入小程序，搜索对应名称即可
-# @Author            Cuttlefish
-# @Tg group          https://t.me/ddgksf2013
-# @WechatID          公众号墨鱼手记
-# @UpdateTime        20201216
-# @ForHelp           若有需要调试的小程序，可公众号后台回复小程序名称
-# @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Applet/Loon.conf
-# @AppletNumer       共计 18 个小程序（更新中...）
-# @Suitable          适用的小程序：森茂雅苑、黑科技软件、天泽后花园、小野分享、 酸酸乳鸡汤、老爷花苑
-# @Suitable          适用的小程序：御花园、搜罗好货、AppleAndroid、扎比科技、小纸箱助手、free 黑科技
-# @Suitable          适用的小程序：图层黑科技、天书乱谈、黑科技软件源、老鬼黑科技、天泽百宝箱、老胡群英会
-# ==/UserScript==
 #!name=公众号小程序去广告
 #!desc=各类小程序广告屏蔽
 #!system=ios
+// ==UserScript==
+// @ScriptName        微信小程序去除广告直接查看隐藏内容或弹窗显示内容
+// @Using             复制链接至Surge的Model订阅里
+// @Download          进入小程序，搜索对应名称即可
+// @Author            Cuttlefish
+// @Tg group          https://t.me/ddgksf2013
+// @WechatID          公众号墨鱼手记
+// @UpdateTime        20201216
+// @ForHelp           若有需要调试的小程序，可公众号后台回复小程序名称
+// @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Applet/Loon.conf
+// @AppletNumer       共计 18 个小程序（更新中...）
+// @Suitable          适用的小程序：森茂雅苑、黑科技软件、天泽后花园、小野分享、 酸酸乳鸡汤、老爷花苑
+// @Suitable          适用的小程序：御花园、搜罗好货、AppleAndroid、扎比科技、小纸箱助手、free 黑科技
+// @Suitable          适用的小程序：图层黑科技、天书乱谈、黑科技软件源、老鬼黑科技、天泽百宝箱、老胡群英会
+// ==/UserScript==
+
 
 [MITM]
 hostname = %APPEND% g.syshhc.top, c.jxjt888.top, www.laoguikeji.cn, qj.bpojie.com, b.tslt.xyz, m.xgjyouhui.com, www.freeheikeji.cn, xcx.xianbaow.com, d.smkj33.top, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, iosoi.cn, jabi.coding.net, 
