--- a/Applet/Surge.conf
+++ b/Applet/Surge.conf
@@ -43,7 +43,7 @@ free 黑科技= type=http-response,pattern=https://www.freeheikeji.cn/wp.json/wp
 
 扎比科技资源箱= type=http-response,pattern=https://jabi.coding.net/p/xcx/d/xcx/git/raw/master/jabikj.json, requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/jabi.js,script-update-interval=0
 
-AppleAndroid= type=http-response,pattern=https://iosoi.cn/wp.json/wp/v2/posts, requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/aa.js,script-update-interval=0
+AppleAndroid= type=http-response,pattern=https://iosoi.cn/wp.json/wp/v2/posts/\d+, requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/aa.js,script-update-interval=0
 
 AppleAndroid卡片广告= type=http-response,pattern=https://iosoi.cn/wp-content/plugins/xingshu.php, requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js,script-update-interval=0
 
