--- a/Applet/Loon.conf
+++ b/Applet/Loon.conf
@@ -37,7 +37,7 @@ http-response https://xcx.xianbaow.com/wp.json/wp/v2/posts requires-body=1,max-s
 
 http-response https://jabi.coding.net/p/xcx/d/xcx/git/raw/master/jabikj.json requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/jabi.js, tag=扎比科技资源箱
 
-http-response https://iosoi.cn/wp.json/wp/v2/posts requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/aa.js, tag=AppleAndroid
+http-response https://iosoi.cn/wp.json/wp/v2/posts/\d+ requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/aa.js, tag=AppleAndroid
 
 http-response https://iosoi.cn/wp-content/plugins/xingshu.php requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js, tag=AppleAndroid卡片广告
 
