--- a/Applet/Quan.conf
+++ b/Applet/Quan.conf
@@ -49,7 +49,7 @@ https://jabi.coding.net/p/xcx/d/xcx/git/raw/master/jabikj.json url script-respon
 # > 009 AppleAndroid 弹框显示内容（20201214）
 https://iosoi.cn/wp-json/wp/v2/posts/\d+ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/aa.js
 # > 辅助去除页面嵌入式式卡片广告（20201214）
-https://iosoi.cn/wp-content/plugins/xingshu.php url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+https://iosoi.cn/wp-content/plugins url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
 # > 008 森茂雅苑 （20201027）
 https://d.smkj33.top/wp-json/wp/v2/posts url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
