--- a/Applet/Loon.conf
+++ b/Applet/Loon.conf
@@ -39,7 +39,7 @@ http-response https://jabi.coding.net/p/xcx/d/xcx/git/raw/master/jabikj.json req
 
 http-response https://iosoi.cn/wp.json/wp/v2/posts/\d+ requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/aa.js, tag=AppleAndroid
 
-http-response https://iosoi.cn/wp-content/plugins/xingshu.php requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js, tag=AppleAndroid卡片广告
+http-response https://iosoi.cn/wp-content/plugins requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js, tag=AppleAndroid卡片广告
 
 http-response https://d.smkj33.top/wp.json/wp/v2/posts requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js, tag=森茂雅苑
 
