--- a/Applet/Surge.conf
+++ b/Applet/Surge.conf
@@ -45,7 +45,7 @@ free 黑科技= type=http-response,pattern=https://www.freeheikeji.cn/wp.json/wp
 
 AppleAndroid= type=http-response,pattern=https://iosoi.cn/wp.json/wp/v2/posts/\d+, requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/aa.js,script-update-interval=0
 
-AppleAndroid卡片广告= type=http-response,pattern=https://iosoi.cn/wp-content/plugins/xingshu.php, requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js,script-update-interval=0
+AppleAndroid卡片广告= type=http-response,pattern=https://iosoi.cn/wp-content/plugins, requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js,script-update-interval=0
 
 森茂雅苑= type=http-response,pattern=https://d.smkj33.top/wp.json/wp/v2/posts, requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js,script-update-interval=0
 
