--- a/Rewrite/Applet_backup.conf
+++ b/Rewrite/Applet_backup.conf
@@ -1,6 +1,6 @@
 // ==UserScript==
 // @Name              **微信小程序去除广告直接查看隐藏内容或弹窗显示内容**
-// @Using             复制重写链接至QuantumultX的[rewrite_remote]下
+// @Using             进入库里的Applet下找对应软件使用
 // @Download          进入小程序，搜索对应名称即可
 // @Author            Cuttlefish
 // @Tg group          https://t.me/ddgksf2013
