--- a/Applet/Quan.conf
+++ b/Applet/Quan.conf
@@ -11,13 +11,14 @@
 // @AppletNumer       共计 18 个小程序（更新中...）
 // @Suitable          适用的小程序：森茂雅苑、黑科技软件、天泽后花园、小野分享、 酸酸乳鸡汤、老爷花苑
 // @Suitable          适用的小程序：御花园、搜罗好货、AppleAndroid、扎比科技、小纸箱助手、free 黑科技
-// @Suitable          适用的小程序：图层黑科技、天书乱谈、黑科技软件源、老鬼黑科技、天泽百宝箱、老胡群英会
+// @Suitable          适用的小程序：图层黑科技、天书X乱谈、黑科技软件源、老鬼黑科技、天泽百宝箱、老胡群英会
 // ==/UserScript==
 
 
-hostname = g.syshhc.top, c.jxjt888.top, www.laoguikeji.cn, qj.bpojie.com, b.tslt.xyz, m.xgjyouhui.com, www.freeheikeji.cn, xcx.xianbaow.com, d.smkj33.top, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, iosoi.cn, jabi.coding.net, 
+hostname = *.tslt.xyz, g.syshhc.top, c.jxjt888.top, www.laoguikeji.cn, qj.bpojie.com, b.tslt.xyz, m.xgjyouhui.com, www.freeheikeji.cn, xcx.xianbaow.com, d.smkj33.top, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, iosoi.cn, jabi.coding.net, 
 
-
+# > 019 天书乱谈（20201215）
+https://[a-z]+.tslt.xyz/wp-json/wp/v2/posts url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
 # > 018 老胡群英会（20201215）
 https://g.syshhc.top/wp-json/wp/v2/posts url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
@@ -31,7 +32,7 @@ https://www.laoguikeji.cn/wp-json/wp/v2/posts url script-response-body https://r
 # > 015 黑科技软件源（20201215）
 https://qj.bpojie.com/wp-json/wp/v2/posts url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
-# > 014 天书乱谈（20201215）
+# > 014 天书X乱谈（20201215）
 https://b.tslt.xyz/wp-json/wp/v2/posts url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
 # > 013 图层黑科技（20201215）
