--- a/Applet/Surge.conf
+++ b/Applet/Surge.conf
@@ -1,5 +1,5 @@
 #!name=公众号小程序去广告
-#!desc=各类小程序广告屏蔽
+#!desc=Created by Cuttlefish
 #!system=ios
 // ==UserScript==
 // @ScriptName        微信小程序去除广告直接查看隐藏内容或弹窗显示内容
