--- a/Applet/Surge.conf
+++ b/Applet/Surge.conf
@@ -11,10 +11,10 @@
 // @UpdateTime        20201216
 // @ForHelp           若有需要调试的小程序，可公众号后台回复小程序名称
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Applet/Surge.conf
-// @AppletNumer       共计 18 个小程序（更新中...）
+// @AppletNumer       共计 16 个小程序（更新中...）
 // @Suitable          适用的小程序：森茂雅苑、黑科技软件、天泽后花园、小野分享、 酸酸乳鸡汤、老爷花苑
-// @Suitable          适用的小程序：御花园、搜罗好货、AppleAndroid、扎比科技、小纸箱助手、free 黑科技
-// @Suitable          适用的小程序：图层黑科技、天书乱谈、黑科技软件源、老鬼黑科技、天泽百宝箱、老胡群英会
+// @Suitable          适用的小程序：御花园、搜罗好货、小纸箱助手、free 黑科技、天泽百宝箱、老胡群英会
+// @Suitable          适用的小程序：图层黑科技、天书乱谈、黑科技软件源、老鬼黑科技
 // ==/UserScript==
 
 
@@ -40,10 +40,6 @@ URL-REGEX,^https:\/\/hkj178\.com\wp-json/mp/v2/advert/wechat,REJECT-TINYGIF
 free 黑科技= type=http-response,pattern=https://www.freeheikeji.cn/wp.json/wp/v2/posts, requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/apt.js,script-update-interval=0
 
 小纸箱助手= type=http-response,pattern=https://xcx.xianbaow.com/wp.json/wp/v2/posts, requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/apt.js,script-update-interval=0
-
-扎比科技资源箱= type=http-response,pattern=https://jabi.coding.net/p/xcx/d/xcx/git/raw/master/jabikj.json, requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/jabi.js,script-update-interval=0
-
-AppleAndroid= type=http-response,pattern=https://iosoi.cn/wp.json/wp/v2/posts/\d+, requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/aa.js,script-update-interval=0
 
 AppleAndroid卡片广告= type=http-response,pattern=https://iosoi.cn/wp-content/plugins, requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/apt.js,script-update-interval=0
 
