--- a/Applet/Quan.conf
+++ b/Applet/Quan.conf
@@ -12,7 +12,7 @@
 // @Suitable          适用的小程序：森茂雅苑、黑科技软件、天泽后花园、小野分享、 酸酸乳鸡汤、老爷花苑
 // @Suitable          适用的小程序：御花园、搜罗好货、AppleAndroid、扎比科技、小纸箱助手、free 黑科技
 // @Suitable          适用的小程序：图层黑科技、天书X乱谈、黑科技软件源、老鬼黑科技、天泽百宝箱、老胡群英会
-// @Suitable          适用的小程序：天书乱谈、火箭软件库、搞机师兄、世颜说
+// @Suitable          适用的小程序：天书乱谈、火箭软件库、搞机师兄、世颜说、公子黑科技、电视盒子君、森茂小苑
 // ==/UserScript==
 
 
