--- a/Rewrite/TikTok.conf
+++ b/Rewrite/TikTok.conf
@@ -1,7 +1,13 @@
-hostname=*.tiktokv.com, *.byteoversea.com, api*.musical.ly, api*.amemv.com, aweme*.snssdk.com,*tiktokcdn.com,
+hostname=*.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com, 
+
 
 #这个是 Appstore 美区下载的 Tiktok 版本
 # Tiktok
-(?<=_region=)CN(?=&) url 307 JP
-(?<=&app_version=)1[6-9]..(?=.?.?&) url 307 1
-(?<=\?version_code=)1[6-9]..(?=.?.?&) url 307 1
+(?<=_region=)CN(?=&) url 307 KR
+(?<=&mcc_mnc=)4 url 307 2
+^(https?:\/\/dm[\w-]+\.\w+\.com\/.+)(\?)(.+) url 302 $1$3
+
+
+
+
+
