--- a/Rewrite/TikTok.conf
+++ b/Rewrite/TikTok.conf
@@ -3,7 +3,7 @@ hostname=*.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com,
 
 #这个是 Appstore 美区下载的 Tiktok 版本
 # Tiktok
-(?<=_region=)CN(?=&) url 307 KR
+(?<=_region=)CN(?=&) url 307 JP
 (?<=&mcc_mnc=)4 url 307 2
 ^(https?:\/\/dm[\w-]+\.\w+\.com\/.+)(\?)(.+) url 302 $1$3
 
