--- a/Applet/Quan.conf
+++ b/Applet/Quan.conf
@@ -5,10 +5,10 @@
 // @Author            Cuttlefish
 // @Tg                https://t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
-// @UpdateTime        20201218
+// @UpdateTime        20201228
 // @ForHelp           若有需要调试的小程序，可公众号后台回复小程序名称
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Applet/Quan.conf
-// @AppletNumer       共计 25 个小程序（更新中...）
+// @AppletNumer       共计 26 个小程序（更新中...）
 // @Suitable          适用的小程序：森茂雅苑、黑科技软件、天泽后花园、小野分享、 酸酸乳鸡汤、老爷花苑
 // @Suitable          适用的小程序：御花园、搜罗好货、AppleAndroid、扎比科技、小纸箱助手、free 黑科技
 // @Suitable          适用的小程序：图层黑科技、天书X乱谈、黑科技软件源、老鬼黑科技、天泽百宝箱、老胡群英会
@@ -16,7 +16,11 @@
 // ==/UserScript==
 
 
-hostname = *.tslt.xyz, g.syshhc.top, c.jxjt888.top, www.laoguikeji.cn, qj.bpojie.com, b.tslt.xyz, m.xgjyouhui.com, www.freeheikeji.cn, xcx.xianbaow.com, *.smkj33.top, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, iosoi.cn, jabi.coding.net, jt.jxjt888.top, gjsx.vip, d.syshhc.top, gz.gongzijx.com, tvapp.guilaile.cn, 
+hostname = *.tslt.xyz, g.syshhc.top, c.jxjt888.top, www.laoguikeji.cn, qj.bpojie.com, b.tslt.xyz, m.xgjyouhui.com, www.freeheikeji.cn, xcx.xianbaow.com, *.smkj33.top, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, iosoi.cn, jabi.coding.net, jt.jxjt888.top, gjsx.vip, d.syshhc.top, gz.gongzijx.com, tvapp.guilaile.cn, www.benbenfx.xyz, 
+
+
+# > 026 科技窝（20201228）
+https://www.benbenfx.xyz/wp-json/wp/v2/posts url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
 # > 025 森茂小苑 （20201219）
 https://[a-z]+.smkj33.top/wp-json/wp/v2/posts url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
