--- a/Rewrite/TikTok.conf
+++ b/Rewrite/TikTok.conf
@@ -1,8 +1,7 @@
 hostname=*.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com, 
 
 
-#这个是 Appstore 美区下载的 Tiktok 版本
-# Tiktok
+#这个是 Appstore 美区下载的 Tiktok 最新版本
 (?<=_region=)CN(?=&) url 307 JP
 (?<=&mcc_mnc=)4 url 307 2
 ^(https?:\/\/dm[\w-]+\.\w+\.com\/.+)(\?)(.+) url 302 $1$3
