--- a/Profile/Shadowrocket.conf
+++ b/Profile/Shadowrocket.conf
@@ -55,7 +55,7 @@ cdn.pcbeta.css.inimc.com = 120.52.19.113
 酷我音乐2⃣️= type=http-request,script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/kuwodl.js,pattern=^https?:\/\/musicpay\.kuwo.cn\/music\.pay\?uid=\d+,max-size=131072,timeout=10,enable=true
 
 
-微信小程序= type=http-response,pattern=^https:\/\/.*\..*\..*\/wp\.json\/wp\/v2\/posts, requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/apt.js,script-update-interval=0
+微信小程序= type=http-response,pattern=(http(s)?:\/\/)[a-zA-Z0-9][-a-zA-Z0-9]{0,62}(\.[a-zA-Z0-9][-a-zA-Z0-9]{0,62})+/wp-json/wp/v2/posts, requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/apt.js,script-update-interval=0
 
 
 [MITM]
