--- a/Applet/Quan.conf
+++ b/Applet/Quan.conf
@@ -13,6 +13,7 @@
 // @Suitable          适用的小程序：御花园、搜罗好货、AppleAndroid、扎比科技、小纸箱助手、free 黑科技
 // @Suitable          适用的小程序：图层黑科技、天书X乱谈、黑科技软件源、老鬼黑科技、天泽百宝箱、老胡群英会
 // @Suitable          适用的小程序：天书乱谈、火箭软件库、搞机师兄、世颜说、公子黑科技、电视盒子君、森茂小苑
+// @Suitable          适用的小程序：科技窝
 // ==/UserScript==
 
 
