--- a/Profile/Shadowrocket.conf
+++ b/Profile/Shadowrocket.conf
@@ -1,4 +1,5 @@
 # 公众号墨鱼手记，小火箭自用配置
+# Update time: 2020-12-30
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
@@ -41,7 +42,6 @@ cdn.pcbeta.static.inimc.com = 120.52.19.113
 cdn.pcbeta.css.inimc.com = 120.52.19.113
 
 [URL Rewrite]
-
 #TikTok国际版抖音最新版解锁
 (?<=_region=)CN(?=&) JP 307
 (?<=&mcc_mnc=)4 2 307
@@ -57,7 +57,6 @@ ctier=[A-Z] ctier=A 302
 
 酷我音乐1⃣️= type=http-response,script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/kuwo.js,pattern=^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice),max-size=131072,requires-body=true,timeout=10,enable=true
 酷我音乐2⃣️= type=http-request,script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/kuwodl.js,pattern=^https?:\/\/musicpay\.kuwo.cn\/music\.pay\?uid=\d+,max-size=131072,timeout=10,enable=true
-
 
 微信小程序= type=http-response,pattern=(http(s)?:\/\/)[a-zA-Z0-9][-a-zA-Z0-9]{0,62}(\.[a-zA-Z0-9][-a-zA-Z0-9]{0,62})+/wp-json/wp/v2/posts, requires-body=1,max-size=0, script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/apt.js,script-update-interval=0
 
