--- a/Rewrite/Ua.conf
+++ b/Rewrite/Ua.conf
@@ -19,4 +19,4 @@ hostname = *.csdn.net, m.baidu.com, www.jianshu.com,
 
 # > 简书
 ^https:\/\/www\.jianshu\.com\/p url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.108 Safari/537.36$2
-^https:\/\/www\.jianshu\.com\/p url script-response-body ^https:\/\/www\.jianshu\.com\/p url script-response-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/jianshu.js
+^https:\/\/www\.jianshu\.com\/p url script-response-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/jianshu.js
