--- a/Rewrite/Rrtv.conf
+++ b/Rewrite/Rrtv.conf
@@ -1,3 +1,17 @@
+// ==UserScript==
+// @ScriptName        人人视频 Crack
+// @Author            Cuttlefish
+// @Tg                https://t.me/ddgksf2013
+// @WechatID          公众号墨鱼手记
+// @UpdateTime        20210111
+// @Function          去除页面广告和视频播放前广告
+// @ScriptTime        若脚本失效可抓取对应时间的旧版本应用
+// @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/Rrtv.conf
+// ==/UserScript==
 
-# 19 人人影視解锁原画
-^https:\/\/api\.rr\.tv(\/user\/privilege\/list|\/ad\/getAll|\/rrtv-video\/v4plus\/season\/detail) url script-response-body rrtv.js
+hostname = api.rr.tv, 
+
+
+^https:\/\/api\.rr\.tv(\/user\/privilege\/list|\/ad\/getAll|\/rrtv-video\/v4plus\/season\/detail) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/rrtv.js
+^https:\/\/api\.rr\.tv\/drama\/app\/get_combined_drama_detail url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/rrtv.js
+^https:\/\/api\.rr\.tv\/drama\/app\/get_combined_drama_detail\?(.+)quality=\w+(.+) url 302 https:\/\/api\.rr\.tv\/drama\/app\/get_combined_drama_detail\?(.+)quality=AI_OD(.+)
