--- a/Rewrite/Rrtv.conf
+++ b/Rewrite/Rrtv.conf
@@ -14,4 +14,4 @@ hostname = api.rr.tv,
 
 ^https:\/\/api\.rr\.tv(\/user\/privilege\/list|\/ad\/getAll|\/rrtv-video\/v4plus\/season\/detail) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/rrtv.js
 ^https:\/\/api\.rr\.tv\/drama\/app\/get_combined_drama_detail url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/rrtv.js
-^https:\/\/api\.rr\.tv\/drama\/app\/get_combined_drama_detail\?(.+)quality=\w+(.+) url 302 https:\/\/api\.rr\.tv\/drama\/app\/get_combined_drama_detail\?(.+)quality=AI_OD(.+)
+^https:\/\/api\.rr\.tv\/drama\/app\/get_combined_drama_detail\?(.+)quality=\w+(.+) url 302 https://api.rr.tv/drama/app/get_combined_drama_detail?(.+)quality=AI_OD(.+)
