--- a/Rewrite/Rrtv.conf
+++ b/Rewrite/Rrtv.conf
@@ -4,7 +4,7 @@
 // @Tg                https://t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20210111
-// @Function          去除页面广告和视频播放前广告
+// @Function          去除页面广告和视频播放前广告，解锁超级弹幕，极速缓存，破解AI画质（有可能是自我安慰）
 // @ScriptTime        若脚本失效可抓取对应时间的旧版本应用
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/Rrtv.conf
 // ==/UserScript==
