--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -11,8 +11,11 @@
 
 ****Please don't quote this rewrite configuration****
 
-# > 065 斑马海报 解锁会员权限（20210130）
+# > 066 斑马海报 解锁会员权限（20210130）
+https://zebra.maka.im/api/user/info url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/bmhb.js
 
+# > 065 谜底时钟 一次性解锁会员权限（20210129）
+;The content is obtained from the Cuttlefish WeChat public account
 
 # > 064 予图阁 微信小程序 弹窗给出原图及1080图的URL（20210119）
 https://3dd0be8a-54fe-43ff-a0e7-f670c4f20432.bspapp.com/.*get_wallpaper_detail url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/ytg.js
