--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -12,6 +12,8 @@
 ****Please don't quote this rewrite configuration****
 
 
+# > 067 儿童睡前故事 解锁VIP故事（20210131）
+https://www.babybooks.top/v0/profile url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/etsqgs.js
 
 # > 066 斑马海报 解锁会员权限（20210130）
 https://zebra.maka.im/api/user/info url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/bmhb.js
