--- a/Rewrite/TFDownload.conf
+++ b/Rewrite/TFDownload.conf
@@ -3,9 +3,9 @@
 // @Author            Cuttlefish
 // @Tg                https://t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
-// @UpdateTime        20210111
+// @UpdateTime        20210206
 // @Function          解决国区TF中无法下载某些应用（QX、小火箭、LOON）的问题
-// @ScriptTime        若脚本失效可抓取对应时间的旧版本应用
+// @Attention         对于普通TF应用的更新应该没有啥影响，具体事项未测试
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/TFDownload.conf
 // ==/UserScript==
 
