--- a/Rewrite/TFDownload.conf
+++ b/Rewrite/TFDownload.conf
@@ -1,6 +1,6 @@
 // ==UserScript==
 // @ScriptName        TFDownload
-// @Author            Cuttlefish
+// @Author            @id77, Modified by Cuttlefish
 // @Tg                https://t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20210206
