--- a/Applet/Shad.conf
+++ b/Applet/Shad.conf
@@ -4,7 +4,7 @@
 // @Using             手动复制链接[Script]下面的内容至小火箭配置的[Script]下，并手动添加hostname
 // @Download          进入小程序，搜索对应名称即可
 // @Author            Cuttlefish
-// @Tg                https://t.me/ddgksf2013
+// @TgChannel         https://t.me/ddgksf2021
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20201216
 // @ForHelp           若有需要调试的小程序，可公众号后台回复小程序名称
