--- a/Applet/Loon.conf
+++ b/Applet/Loon.conf
@@ -3,7 +3,7 @@
 // @Using             复制重写链接至Loon里
 // @Download          进入小程序，搜索对应名称即可
 // @Author            Cuttlefish
-// @Tg                https://t.me/ddgksf2013
+// @TgChannel         https://t.me/ddgksf2021
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20201216
 // @ForHelp           若有需要调试的小程序，可公众号后台回复小程序名称
