--- a/Profile/Profile_Quan.conf
+++ b/Profile/Profile_Quan.conf
@@ -1,7 +1,7 @@
 // ==UserScript==
 // @Name              QX 小白配置文件
 // @Author            Cuttlefish
-// @Tg group          https://t.me/ddgksf2013
+// @TgChannel         https://t.me/ddgksf2021
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20200922
 // @Explain           若有问题，可以去TG群反馈
