--- a/Rewrite/History_price.conf
+++ b/Rewrite/History_price.conf
@@ -1,7 +1,7 @@
 // ==UserScript==
 // @Name              QX Function 脚本
 // @Author            yichahucha(https://github.com/yichahucha/surge)
-// @Tg                t.me/ddgksf2013
+// @TgChannel         https://t.me/ddgksf2021
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20200904
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/History_price.conf
