--- a/Rewrite/Kuwo.conf
+++ b/Rewrite/Kuwo.conf
@@ -1,7 +1,7 @@
 // ==UserScript==
 // @ScriptName        酷我音乐
 // @Author            Cuttlefish
-// @Tg                https://t.me/ddgksf2013
+// @TgChannel         https://t.me/ddgksf2021
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20201220
 // @Function          **可听无损，可下无损**
