--- a/Rewrite/MyAdRule.conf
+++ b/Rewrite/MyAdRule.conf
@@ -2,7 +2,7 @@
 // @ScriptName        QX去广告重写配置
 // @Author            @Cuttlefish, @blackmatrix7
 // @RelatedGitHub     https://github.com/blackmatrix7, https://github.com/ddgksf2013/Cuttlefish
-// @Tg                https://t.me/ddgksf2013
+// @TgChannel         https://t.me/ddgksf2021
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20210124
 // @Function          去广告配置（自用，不定期更新）
