--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -1,7 +1,7 @@
 // ==UserScript==
 // @ScriptName        Quan Crack 脚本
 // @Author            Cuttlefish
-// @Tg                https://t.me/ddgksf2013
+// @TgChannel         https://t.me/ddgksf2021
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20210130
 // @Attention         Only for backup,please don't quote this rewrite configuration
