--- a/Rewrite/Rrtv.conf
+++ b/Rewrite/Rrtv.conf
@@ -1,7 +1,7 @@
 // ==UserScript==
 // @ScriptName        人人视频 Crack
 // @Author            Cuttlefish
-// @Tg                https://t.me/ddgksf2013
+// @TgChannel         https://t.me/ddgksf2021
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20210111
 // @Function          去除页面广告和视频播放前广告，解锁超级弹幕，极速缓存，破解AI画质（自我安慰）
