--- a/Rewrite/TFDownload.conf
+++ b/Rewrite/TFDownload.conf
@@ -1,7 +1,7 @@
 // ==UserScript==
 // @ScriptName        TFDownload
 // @Author            @id77, Modified by Cuttlefish
-// @Tg                https://t.me/ddgksf2013
+// @TgChannel         https://t.me/ddgksf2021
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20210206
 // @Function          解决国区TF中无法下载某些应用（QX、小火箭、LOON）的问题
