--- a/Rewrite/Ua.conf
+++ b/Rewrite/Ua.conf
@@ -3,7 +3,7 @@
 // @Website           百度，CSDN，简书          
 // @Author            @elecV2、@Cuttlefish
 // @Share             若有需要的网站UA设置，可TG私信
-// @Tg                https://t.me/ddgksf2013
+// @TgChannel         https://t.me/ddgksf2021
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20210101    
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/Ua.conf
