--- a/Rewrite/Xxys.conf
+++ b/Rewrite/Xxys.conf
@@ -2,7 +2,7 @@
 // @Name              小小影视去广告&破解**最新TF版**
 // @Download          https://www.xx9.tv
 // @Author            @GB-png, Modified by Cuttlefish
-// @Tg                https://t.me/ddgksf2013
+// @TgChannel         https://t.me/ddgksf2021
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20201030      
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/Xxys.conf
