--- a/Rewrite/MyAdRule.conf
+++ b/Rewrite/MyAdRule.conf
@@ -11,13 +11,11 @@
 // ==/UserScript==
 
 
-hostname=*.googlevideo.com, *.xxjjappss.com,*.huaerdadi.com, api.rr.tv, capis.didapinche.com,capis*.didapinche.com, homepage-api.smzdm.com,haojia-api.smzdm.com,article-api.smzdm.com,haojia.m.smzdm.com,app-api.smzdm.com,s-api.smzdm.com, *.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com, www.zhihu.com,api.zhihu.com,appcloud2.zhihu.com,zhuanlan.zhihu.com, *.hoopchina.com,goblin.hupu.com,spclient.wg.spotify.com,youtubei.googleapis.com,www.youtube.com,www.googleapis.com,youtubei.googleapis.com,s.youtube.com,play.googleapis.com,
+hostname=*.googlevideo.com, api.rr.tv, capis.didapinche.com,capis*.didapinche.com, homepage-api.smzdm.com,haojia-api.smzdm.com,article-api.smzdm.com,haojia.m.smzdm.com,app-api.smzdm.com,s-api.smzdm.com, *.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com, www.zhihu.com,api.zhihu.com,appcloud2.zhihu.com,zhuanlan.zhihu.com, *.hoopchina.com,goblin.hupu.com,spclient.wg.spotify.com,youtubei.googleapis.com,www.youtube.com,www.googleapis.com,youtubei.googleapis.com,s.youtube.com,play.googleapis.com,
 
 # > Youtube
 ^https?:\/\/.+?\.googlevideo\.com\/.+&(oad|ctier)=(?!A) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/youtube.js
 
-# > 小小影视
-^https:\/\/.*\..*\.com\/(ssp-svr\/ssp\/list3|ucp/index) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xxys.js
 
 # > 人人视频
 ^https:\/\/api\.rr\.tv\/user\/privilege\/list url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/rrtv.js
