--- a/Rewrite/Xxys.conf
+++ b/Rewrite/Xxys.conf
@@ -1,13 +1,13 @@
 // ==UserScript==
 // @Name              小小影视去广告&破解**最新TF版**
-// @Download          https://www.xx9.tv
-// @Author            @GB-png, Modified by Cuttlefish
+// @Download          tf.niux123.com
+// @Author            Cuttlefish
 // @TgChannel         https://t.me/ddgksf2021
 // @WechatID          公众号墨鱼手记
-// @UpdateTime        20201030      
+// @UpdateTime        20210214      
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/Xxys.conf
 // ==/UserScript==
 
-hostname = *.xxjjappss.com,*.huaerdadi.com
+hostname = *.xxjjappss.com,
 
-https:\/\/.*\..*\.com\/(ssp-svr\/ssp\/list3|ucp/index) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xxys.js
+https:\/\/.*\..*\.com\/(ucp/index|getGlobalData|init) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xxys.js
