--- a/Rewrite/Xxys.conf
+++ b/Rewrite/Xxys.conf
@@ -10,4 +10,4 @@
 
 hostname = *.xxjjappss.com,
 
-https:\/\/.*\..*\.com\/(ucp/index|getGlobalData|init) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xxys.js
+https:\/\/.*\..*\.com\/(vod\/reqplay\/|ucp\/index|getGlobalData|init) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xxys.js
