--- a/Rewrite/Xxys.conf
+++ b/Rewrite/Xxys.conf
@@ -1,9 +1,10 @@
 // ==UserScript==
-// @Name              小小影视去广告&破解**最新TF版**
+// @Name              小小影视最新版去广告&破解
+// @Suitable          **最新TF版**
 // @Download          tf.niux123.com
 // @Author            Cuttlefish
 // @TgChannel         https://t.me/ddgksf2021
-// @WechatID          公众号墨鱼手记
+// @WechatID          墨鱼手记
 // @UpdateTime        20210214      
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/Xxys.conf
 // ==/UserScript==
