--- a/Rewrite/Xxys.conf
+++ b/Rewrite/Xxys.conf
@@ -1,6 +1,7 @@
 // ==UserScript==
 // @Name              小小影视最新版去广告&破解
 // @Suitable          **最新TF版**
+// @Attention         如果你每天观看视频次数较少，可以使用此配置
 // @Download          tf.niux123.com
 // @Author            Cuttlefish
 // @TgChannel         https://t.me/ddgksf2021
