--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -12,6 +12,9 @@
 ****Please don't quote this rewrite configuration****
 
 
+
+# > 068 EgoReader
+
 # > 067 儿童睡前故事 解锁VIP故事（20210131）
 https://www.babybooks.top/v0/profile url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/etsqgs.js
 
