--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -13,7 +13,8 @@
 
 
 
-# > 068 EgoReader
+# > 068 Avatarify 破解会员功能（20210228）
+;https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/avatarify.js
 
 # > 067 儿童睡前故事 解锁VIP故事（20210131）
 https://www.babybooks.top/v0/profile url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/etsqgs.js
