--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -12,6 +12,8 @@
 ****Please don't quote this rewrite configuration****
 
 
+# > 069 简衣橱 一次性解锁会员权限（20210228）
+;The content is obtained from the Cuttlefish WeChat public account
 
 # > 068 Avatarify 破解会员功能（20210228）
 ;https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/avatarify.js
