--- a/Profile/QuantumultX.conf
+++ b/Profile/QuantumultX.conf
@@ -3,11 +3,11 @@
 // @Author            Cuttlefish
 // @TgChannel         https://t.me/ddgksf2021
 // @WechatID          公众号墨鱼手记
-// @UpdateTime        20210225
+// @UpdateTime        20210301
 // @Explain           若有问题，可以去TG联系我-> Https://t.me/ddgksf
 // @Attention         本配置文件的Task只更新京东相关脚本
 // @Function          去广告+知乎+历史价格+油管+酷我+网易云破解+embyUnlocked
-// @Function          京东签到集合+解析器
+// @Function          京东签到集合+解析器+人人视频+小小影视+荟聚动漫
 // @ScriptURL         https://github.com/ddgksf2013/Cuttlefish/raw/master/Profile/QuantumultX.conf
 // ==/UserScript==
 
