--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -12,6 +12,12 @@
 ****Please don't quote this rewrite configuration****
 
 
+
+# > 071 Cal 解锁会员订阅功能 （20210302）
+
+# > 070 MoneyCoach 解锁会员权限 （20210301）
+;The content is obtained from the Cuttlefish WeChat public account
+
 # > 069 简衣橱 一次性解锁会员权限（20210228）
 ;The content is obtained from the Cuttlefish WeChat public account
 
