--- a/Rewrite/History_price.conf
+++ b/Rewrite/History_price.conf
@@ -3,15 +3,17 @@
 // @Author            yichahucha(https://github.com/yichahucha/surge)
 // @TgChannel         https://t.me/ddgksf2021
 // @WechatID          公众号墨鱼手记
-// @UpdateTime        20200904
+// @UpdateTime        20210310
+// @Comment           取消淘宝商品历史价格的显示
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/History_price.conf
 // ==/UserScript==
 
-hostname = trade-acs.m.taobao.com, api.m.jd.com
+hostname = api.m.jd.com
 
 # > 京东商品历史价格显示（20200904）
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/jd_price.js
 
 # > 淘宝商品历史价格显示（20200904）
-^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/tb_price.js
-^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/tb_price.js
+//^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/tb_price.js
+//^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/tb_price.js
+//trade-acs.m.taobao.com,
