--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -11,7 +11,8 @@
 
 ****Please don't quote this rewrite configuration****
 
-
+# > 073 医考帮 解锁应用内题库及课程（20210313）
+https://api.yikaobang.com.cn/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/ykb.js
 
 # > 072 百度云倍速播放和会员专属清晰度Crack功能 （20210310）
 https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/bdcloud.js
