--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -18,6 +18,7 @@ https://api.yikaobang.com.cn/* url script-response-body https://raw.githubuserco
 https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/bdcloud.js
 
 # > 071 Cal 解锁会员订阅功能 （20210302）
+;uncompleted
 
 # > 070 MoneyCoach 解锁会员权限 （20210301）
 ;The content is obtained from the Cuttlefish WeChat public account
